# homework31

./: manage.py  pyproject.toml  pytests.ini
ads/: models.py  permissions.py
ads/migrations/: 0001_initial.py  0002_selection.py  0003_category_slug_user_birth_date_alter_ad_description_and_more.py  0004_alter_user_birth_date.py  0005_alter_category_slug.py
ads/serializers/: ad.py  user.py
ads/urls/: urls_ad.py  urls_cat.py  urls_us.py
ads/views/: views.py  views_ad.py  views_cat.py  views_us.py
csv_data28/: ad.json  users.json
levito/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_detail_test.py  ad_list_test.py  selection_create_test.py
